--- a/Q4FY16.html
+++ b/Q4FY16.html
@@ -363,15 +363,16 @@ your input to revise the strategy and publish an updated version.</li>
                                     <P style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>Frank Calderoni, EVP, Operations + CFO</b> </P>
                                  <ul>
                           
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>We had a strong finish to Q4 and throughout FY15.</b> Total revenue was $544 million, our 56th consecutive quarter of growth. Full fiscal year total revenue was $2.05 billion. Operating margin for Q4 was 22.9%. Full fiscal year operating margin was 23.6%. Revenue growth was 21% after adjusting for currency and expense growth was 19% after adjusting for currency. We have 8,800+ full-time associates and currently plan to add 1200 net new hires in FY17.</li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">Total revenue was $544 million, our 56th consecutive quarter of growth. Full fiscal year total revenue was $2.05 billion. </li>
+Operating margin for Q4 was 22.9%. Full fiscal year operating margin was 23.6%. Revenue growth was 21% after adjusting for currency and expense growth was 19% after adjusting for currency. </li>
 
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>FY16 year over year cc growth Billings Proxy did not meet analyst expectations, and therefore our stock was down 3% after hours.</b> Billings is one indicator of future growth, and when we are ‘priced for perfection’, any slight dip in any indicators of growth will concern our analysts.</li>
+                                    <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">FY16 year over year constant currency growth billings proxy did not meet analyst expectations. Billings is one indicator of future growth, and when we are ‘priced for perfection’, any slight dip in growth indicators will concern analysts. We guided above their expectations for FY17 for revenue, earnings per share, and cash flow. </li>
 
-                                    <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">However, we guided above their expectations for FY17 for revenue, EPS, and cash flow. We have reached excellence as one of 13 companies in the S&P 500 who have consistently posted faster revenue growth than the average company, and we are expected to do it again this year. </li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">We are one of 13 companies in the S&P 500 who consistently posted faster revenue growth than the average company.</li>
 
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">In order to maintain expectations, we must focus on the long-term, scale our enterprise, and embrace the open decision framework with debate, then commit as the goal. This is our opportunity to remain committed and engaged. </li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>We now have 8,800+ full-time associates and currently plan to add 1200 net new hires in FY17.</li>
 
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>The bonus pool for Q4 met our target expectations and was funded at $17.9M.</b> Congratulations to all Red Hatters. Well done, and keep up the great work. </li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>The bonus pool for Q4 was funded at $17.9M.</li>
                                     
                               </ul>
 
