--- a/Q4FY16.html
+++ b/Q4FY16.html
@@ -363,7 +363,7 @@ your input to revise the strategy and publish an updated version.</li>
                                     <P style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>Frank Calderoni, EVP, Operations + CFO</b> </P>
                                  <ul>
                           
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">Total revenue was $544 million, our 56th consecutive quarter of growth. Full fiscal year total revenue was $2.05 billion. </li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">
 Operating margin for Q4 was 22.9%. Full fiscal year operating margin was 23.6%. Revenue growth was 21% after adjusting for currency and expense growth was 19% after adjusting for currency. </li>
 
                                     <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">FY16 year over year constant currency growth billings proxy did not meet analyst expectations. Billings is one indicator of future growth, and when we are ‘priced for perfection’, any slight dip in growth indicators will concern analysts. We guided above their expectations for FY17 for revenue, earnings per share, and cash flow. </li>
