--- a/Q4FY16.html
+++ b/Q4FY16.html
@@ -370,9 +370,9 @@ Operating margin for Q4 was 22.9%. Full fiscal year operating margin was 23.6%. 
 
                                 <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">We are one of 13 companies in the S&P 500 who consistently posted faster revenue growth than the average company.</li>
 
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>We now have 8,800+ full-time associates and currently plan to add 1200 net new hires in FY17.</li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">We now have 8,800+ full-time associates and currently plan to add 1200 net new hires in FY17.</li>
 
-                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131"><b>The bonus pool for Q4 was funded at $17.9M.</li>
+                                <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">The bonus pool for Q4 was funded at $17.9M.</li>
                                     
                               </ul>
 
