company meeting update
Frank's bullets

--- a/Q2FY17.html
+++ b/Q2FY17.html
@@ -424,7 +424,7 @@ After speaking to investors, we heard consistent themes that caused them concern
                                 <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">In the second half of FY17 and for FY18, we’ll need to revisit our hiring plan to bring our expense growth in line with revenue growth</li>
                                    <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">The bonus pool for Q2 was funded at $19.97M
 </li>
-                                   <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">This was a good quarter, and now we need to work together to continue our great performance through the second half of FY17
+                                   <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">Even though it was a good quarter, let’s make the second half a great performance.
 </li>
 </ul>
                                     <span style="font-size:14px; font-weight: bold; font-family: Overpass, arial, sans-serif; color:#313131";>Want more details on our earnings? Check out the slide deck:<a href="https://mojo.redhat.com/docs/DOC-1095754" target="_blank" style="text-decoration: none; color:#cc0000;"> https://mojo.redhat.com/docs/DOC-1095754</a>
