--- a/Q2FY17.html
+++ b/Q2FY17.html
@@ -339,7 +339,7 @@
 
 </li>                  <li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131;">Start creating clear, consistent processes and procedures that make our jobs easier, with enough flexibility to handle exceptions where justified and possible
 </li>                
-<li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">See the full summary of feedback, data, and our hypotheses:<a href="http://red.ht/2d4DNBq" target="_blank" style="text-decoration: none; color:#cc0000;"> http://red.ht/2d4DNBq</a> </li>
+<li style="font-size:15px; line-height:25px; font-family:Overpass, arial, sans-serif; color:#313131">See the full summary of feedback, data, and our hypotheses:<a href="https://mojo.redhat.com/docs/DOC-1095693" target="_blank" style="text-decoration: none; color:#cc0000;"> https://mojo.redhat.com/docs/DOC-1095693</a> </li>
                                     </span>  </span>               
                               
    </ul>   
